Модуль 05 приведён к qulice: 607 нарушений -> 0
Правила ограничений переписаны на единственный `return`: ветвления
собираются в локальную переменную, длинные проверки вынесены
в приватные статические методы — javadoc им запрещён, а `static`
обязателен, раз они не трогают `this`.

Подъём по иерархии в `HierarchySearch` и `ConstrainedFields` переведён
с `for` на `while` с явным условием выхода. Склейки строк заменены
на `String.format`, коллекции создаются с ёмкостью.

Точечно погашено то, что показательно для темы модуля:
`ConstructorsCodeFreeCheck` на исключении `ConstraintsViolated`, которое
обязано собрать сообщение из вердикта, и на конструкторе `Validated`,
снимающем копию списка правил; `ParameterNumberCheck` на фикстуре `User`,
где шесть полей нужны ради шести видов ограничений.

Конвенции, выясненные по ходу, дописаны в RULE.md.